Bug 514375 - kate crash on project close
Summary: kate crash on project close
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.12.0
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2026-01-09 16:29 UTC by Kris
Modified: 2026-01-09 18:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report: https://crash-reports.kde.org/organizations/kde/issues/345849/events/5bd6a3f887174808a74e6664b0ada003/


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kris 2026-01-09 16:29:54 UTC
Application: kate (25.12.0)

ApplicationNotResponding [ANR]: false
Qt Version: 6.10.1
Frameworks Version: 6.21.0
Operating System: Linux 6.17.12-300.fc43.x86_64 x86_64
Windowing System: Wayland
Distribution: "Fedora Linux 43 (Workstation Edition)"
DrKonqi: 6.5.4 [CoredumpBackend]

-- Information about the crash:
I was closing the open project from the left side panel.

The crash can be reproduced sometimes.

-- Backtrace:
Application: Kate (kate), signal: Segmentation fault


This GDB supports auto-downloading debuginfo from the following URLs:
  <ima:enforcing>
  <https://debuginfod.fedoraproject.org/>
  <ima:ignore>
Enable debuginfod for this session? (y or [n]) [answered N; input not from terminal]
Debuginfod has been disabled.
To make this setting permanent, add 'set debuginfod enabled off' to .gdbinit.

warning: Can't open file /memfd:wayland-shm (deleted) during file-backed mapping note processing

warning: Can't open file /home/karisa/.cache/ksycoca6_en_Aqtek3XLVLz3Xw_bA4Z4bL9S5Bo= (deleted) during file-backed mapping note processing
[New LWP 868708]
[New LWP 868716]
[New LWP 868714]
[New LWP 868720]
[New LWP 868718]
[New LWP 868722]
[New LWP 868717]
[New LWP 868713]
[New LWP 908150]
[New LWP 868719]
[New LWP 908149]
[New LWP 868721]
[New LWP 868715]
[New LWP 908155]
[New LWP 908153]
[New LWP 908154]
[New LWP 908151]
[New LWP 908152]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib64/libthread_db.so.1".
Core was generated by `/usr/bin/kate -b'.
Program terminated with signal SIGSEGV, Segmentation fault.
#0  0x00007f1484e813cc in __pthread_kill_implementation () from /lib64/libc.so.6
[Current thread is 1 (Thread 0x7f147da4bbc0 (LWP 868708))]
[Current thread is 12 (Thread 0x7f14523fb6c0 (LWP 868721))]

Thread 18 (Thread 0x7f14503f76c0 (LWP 908152)):
#0  0x00007f1484e87982 in __syscall_cancel_arch () at /lib64/libc.so.6
#1  0x00007f1484e7bc3c in __internal_syscall_cancel () at /lib64/libc.so.6
#2  0x00007f1484e7c2ac in __futex_abstimed_wait_common () at /lib64/libc.so.6
#3  0x00007f1484e7eb88 in pthread_cond_timedwait@@GLIBC_2.3.2 () at /lib64/libc.so.6
#4  0x00007f14856da1a3 in QWaitCondition::wait(QMutex*, QDeadlineTimer) () at /lib64/libQt6Core.so.6
#5  0x00007f148562fe9c in QThreadPoolThread::run() () at /lib64/libQt6Core.so.6
#6  0x00007f14856d19ae in QThreadPrivate::start(void*) () at /lib64/libQt6Core.so.6
#7  0x00007f1484e7f464 in start_thread () at /lib64/libc.so.6
#8  0x00007f1484f025ac in __clone3 () at /lib64/libc.so.6

Thread 17 (Thread 0x7f144d2b66c0 (LWP 908151)):
#0  0x00007f1484e87982 in __syscall_cancel_arch () at /lib64/libc.so.6
#1  0x00007f1484e7bc3c in __internal_syscall_cancel () at /lib64/libc.so.6
#2  0x00007f1484e7c2ac in __futex_abstimed_wait_common () at /lib64/libc.so.6
#3  0x00007f1484e7eb88 in pthread_cond_timedwait@@GLIBC_2.3.2 () at /lib64/libc.so.6
#4  0x00007f14856da1a3 in QWaitCondition::wait(QMutex*, QDeadlineTimer) () at /lib64/libQt6Core.so.6
#5  0x00007f148562fe9c in QThreadPoolThread::run() () at /lib64/libQt6Core.so.6
#6  0x00007f14856d19ae in QThreadPrivate::start(void*) () at /lib64/libQt6Core.so.6
#7  0x00007f1484e7f464 in start_thread () at /lib64/libc.so.6
#8  0x00007f1484f025ac in __clone3 () at /lib64/libc.so.6

Thread 16 (Thread 0x7f14513f96c0 (LWP 908154)):
#0  0x00007f1484e87982 in __syscall_cancel_arch () at /lib64/libc.so.6
#1  0x00007f1484e7bc3c in __internal_syscall_cancel () at /lib64/libc.so.6
#2  0x00007f1484e7c2ac in __futex_abstimed_wait_common () at /lib64/libc.so.6
#3  0x00007f1484e7eb88 in pthread_cond_timedwait@@GLIBC_2.3.2 () at /lib64/libc.so.6
#4  0x00007f14856da1a3 in QWaitCondition::wait(QMutex*, QDeadlineTimer) () at /lib64/libQt6Core.so.6
#5  0x00007f148562fe9c in QThreadPoolThread::run() () at /lib64/libQt6Core.so.6
#6  0x00007f14856d19ae in QThreadPrivate::start(void*) () at /lib64/libQt6Core.so.6
#7  0x00007f1484e7f464 in start_thread () at /lib64/libc.so.6
#8  0x00007f1484f025ac in __clone3 () at /lib64/libc.so.6

Thread 15 (Thread 0x7f144cab56c0 (LWP 908153)):
#0  0x00007f1484e87982 in __syscall_cancel_arch () at /lib64/libc.so.6
#1  0x00007f1484e7bc3c in __internal_syscall_cancel () at /lib64/libc.so.6
#2  0x00007f1484e7c2ac in __futex_abstimed_wait_common () at /lib64/libc.so.6
#3  0x00007f1484e7eb88 in pthread_cond_timedwait@@GLIBC_2.3.2 () at /lib64/libc.so.6
#4  0x00007f14856da1a3 in QWaitCondition::wait(QMutex*, QDeadlineTimer) () at /lib64/libQt6Core.so.6
#5  0x00007f148562fe9c in QThreadPoolThread::run() () at /lib64/libQt6Core.so.6
#6  0x00007f14856d19ae in QThreadPrivate::start(void*) () at /lib64/libQt6Core.so.6
#7  0x00007f1484e7f464 in start_thread () at /lib64/libc.so.6
#8  0x00007f1484f025ac in __clone3 () at /lib64/libc.so.6

Thread 14 (Thread 0x7f14377fe6c0 (LWP 908155)):
#0  0x00007f1484e87982 in __syscall_cancel_arch () at /lib64/libc.so.6
#1  0x00007f1484e7bc3c in __internal_syscall_cancel () at /lib64/libc.so.6
#2  0x00007f1484e7c2ac in __futex_abstimed_wait_common () at /lib64/libc.so.6
#3  0x00007f1484e7eb88 in pthread_cond_timedwait@@GLIBC_2.3.2 () at /lib64/libc.so.6
#4  0x00007f14856da1a3 in QWaitCondition::wait(QMutex*, QDeadlineTimer) () at /lib64/libQt6Core.so.6
#5  0x00007f148562fe9c in QThreadPoolThread::run() () at /lib64/libQt6Core.so.6
#6  0x00007f14856d19ae in QThreadPrivate::start(void*) () at /lib64/libQt6Core.so.6
#7  0x00007f1484e7f464 in start_thread () at /lib64/libc.so.6
#8  0x00007f1484f025ac in __clone3 () at /lib64/libc.so.6

Thread 13 (Thread 0x7f146db3a6c0 (LWP 868715)):
#0  0x00007f1484e87982 in __syscall_cancel_arch () at /lib64/libc.so.6
#1  0x00007f1484e7bc3c in __internal_syscall_cancel () at /lib64/libc.so.6
#2  0x00007f1484e7bc84 in __syscall_cancel () at /lib64/libc.so.6
#3  0x00007f1484ef519e in poll () at /lib64/libc.so.6
#4  0x00007f147e55f3a2 in QtWaylandClient::EventThread::run() () at /lib64/libQt6WaylandClient.so.6
#5  0x00007f14856d19ae in QThreadPrivate::start(void*) () at /lib64/libQt6Core.so.6
#6  0x00007f1484e7f464 in start_thread () at /lib64/libc.so.6
#7  0x00007f1484f025ac in __clone3 () at /lib64/libc.so.6

Thread 12 (Thread 0x7f14523fb6c0 (LWP 868721)):
#0  0x00007f1484e87982 in __syscall_cancel_arch () at /lib64/libc.so.6
#1  0x00007f1484e7bc3c in __internal_syscall_cancel () at /lib64/libc.so.6
#2  0x00007f1484e7c2ac in __futex_abstimed_wait_common () at /lib64/libc.so.6
#3  0x00007f1484e7e97e in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libc.so.6
#4  0x00007f145d34bf1d in cnd_wait () at /lib64/libgallium-25.2.7.so
#5  0x00007f145d30553c in util_queue_thread_func () at /lib64/libgallium-25.2.7.so
#6  0x00007f145d34be4c in impl_thrd_routine () at /lib64/libgallium-25.2.7.so
#7  0x00007f1484e7f464 in start_thread () at /lib64/libc.so.6
#8  0x00007f1484f025ac in __clone3 () at /lib64/libc.so.6

Thread 11 (Thread 0x7f144fbf66c0 (LWP 908149)):
#0  0x00007f1484e87982 in __syscall_cancel_arch () at /lib64/libc.so.6
#1  0x00007f1484e7bc3c in __internal_syscall_cancel () at /lib64/libc.so.6
#2  0x00007f1484e7c2ac in __futex_abstimed_wait_common () at /lib64/libc.so.6
#3  0x00007f1484e7eb88 in pthread_cond_timedwait@@GLIBC_2.3.2 () at /lib64/libc.so.6
#4  0x00007f14856da1a3 in QWaitCondition::wait(QMutex*, QDeadlineTimer) () at /lib64/libQt6Core.so.6
#5  0x00007f148562fe9c in QThreadPoolThread::run() () at /lib64/libQt6Core.so.6
#6  0x00007f14856d19ae in QThreadPrivate::start(void*) () at /lib64/libQt6Core.so.6
#7  0x00007f1484e7f464 in start_thread () at /lib64/libc.so.6
#8  0x00007f1484f025ac in __clone3 () at /lib64/libc.so.6

Thread 10 (Thread 0x7f14533fd6c0 (LWP 868719)):
#0  0x00007f1484e87982 in __syscall_cancel_arch () at /lib64/libc.so.6
#1  0x00007f1484e7bc3c in __internal_syscall_cancel () at /lib64/libc.so.6
#2  0x00007f1484e7c2ac in __futex_abstimed_wait_common () at /lib64/libc.so.6
#3  0x00007f1484e7e97e in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libc.so.6
#4  0x00007f145d34bf1d in cnd_wait () at /lib64/libgallium-25.2.7.so
#5  0x00007f145d30553c in util_queue_thread_func () at /lib64/libgallium-25.2.7.so
#6  0x00007f145d34be4c in impl_thrd_routine () at /lib64/libgallium-25.2.7.so
#7  0x00007f1484e7f464 in start_thread () at /lib64/libc.so.6
#8  0x00007f1484f025ac in __clone3 () at /lib64/libc.so.6

Thread 9 (Thread 0x7f1437fff6c0 (LWP 908150)):
#0  0x00007f1484e87982 in __syscall_cancel_arch () at /lib64/libc.so.6
#1  0x00007f1484e7bc3c in __internal_syscall_cancel () at /lib64/libc.so.6
#2  0x00007f1484e7c2ac in __futex_abstimed_wait_common () at /lib64/libc.so.6
#3  0x00007f1484e7eb88 in pthread_cond_timedwait@@GLIBC_2.3.2 () at /lib64/libc.so.6
#4  0x00007f14856da1a3 in QWaitCondition::wait(QMutex*, QDeadlineTimer) () at /lib64/libQt6Core.so.6
#5  0x00007f148562fe9c in QThreadPoolThread::run() () at /lib64/libQt6Core.so.6
#6  0x00007f14856d19ae in QThreadPrivate::start(void*) () at /lib64/libQt6Core.so.6
#7  0x00007f1484e7f464 in start_thread () at /lib64/libc.so.6
#8  0x00007f1484f025ac in __clone3 () at /lib64/libc.so.6

Thread 8 (Thread 0x7f146f9ff6c0 (LWP 868713)):
#0  0x00007f1484e87982 in __syscall_cancel_arch () at /lib64/libc.so.6
#1  0x00007f1484e7bc3c in __internal_syscall_cancel () at /lib64/libc.so.6
#2  0x00007f1484e7bc84 in __syscall_cancel () at /lib64/libc.so.6
#3  0x00007f1484ef56c6 in ppoll () at /lib64/libc.so.6
#4  0x00007f1483aa42e0 in g_main_context_iterate_unlocked.isra () at /lib64/libglib-2.0.so.0
#5  0x00007f1483aa43a3 in g_main_context_iteration () at /lib64/libglib-2.0.so.0
#6  0x00007f148581e80d in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib64/libQt6Core.so.6
#7  0x00007f1485509063 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib64/libQt6Core.so.6
#8  0x00007f148562bdc6 in QThread::exec() () at /lib64/libQt6Core.so.6
#9  0x00007f148749fae1 in QDBusConnectionManager::run() () at /lib64/libQt6DBus.so.6
#10 0x00007f14856d19ae in QThreadPrivate::start(void*) () at /lib64/libQt6Core.so.6
#11 0x00007f1484e7f464 in start_thread () at /lib64/libc.so.6
#12 0x00007f1484f025ac in __clone3 () at /lib64/libc.so.6

Thread 7 (Thread 0x7f14543ff6c0 (LWP 868717)):
#0  0x00007f1484e87982 in __syscall_cancel_arch () at /lib64/libc.so.6
#1  0x00007f1484e7bc3c in __internal_syscall_cancel () at /lib64/libc.so.6
#2  0x00007f1484e7c2ac in __futex_abstimed_wait_common () at /lib64/libc.so.6
#3  0x00007f1484e7e97e in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libc.so.6
#4  0x00007f145d34bf1d in cnd_wait () at /lib64/libgallium-25.2.7.so
#5  0x00007f145d30553c in util_queue_thread_func () at /lib64/libgallium-25.2.7.so
#6  0x00007f145d34be4c in impl_thrd_routine () at /lib64/libgallium-25.2.7.so
#7  0x00007f1484e7f464 in start_thread () at /lib64/libc.so.6
#8  0x00007f1484f025ac in __clone3 () at /lib64/libc.so.6

Thread 6 (Thread 0x7f1451bfa6c0 (LWP 868722)):
#0  0x00007f1484e87982 in __syscall_cancel_arch () at /lib64/libc.so.6
#1  0x00007f1484e7bc3c in __internal_syscall_cancel () at /lib64/libc.so.6
#2  0x00007f1484e7c2ac in __futex_abstimed_wait_common () at /lib64/libc.so.6
#3  0x00007f1484e7e97e in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libc.so.6
#4  0x00007f145d34bf1d in cnd_wait () at /lib64/libgallium-25.2.7.so
#5  0x00007f145d30553c in util_queue_thread_func () at /lib64/libgallium-25.2.7.so
#6  0x00007f145d34be4c in impl_thrd_routine () at /lib64/libgallium-25.2.7.so
#7  0x00007f1484e7f464 in start_thread () at /lib64/libc.so.6
#8  0x00007f1484f025ac in __clone3 () at /lib64/libc.so.6

Thread 5 (Thread 0x7f1453bfe6c0 (LWP 868718)):
#0  0x00007f1484e87982 in __syscall_cancel_arch () at /lib64/libc.so.6
#1  0x00007f1484e7bc3c in __internal_syscall_cancel () at /lib64/libc.so.6
#2  0x00007f1484e7c2ac in __futex_abstimed_wait_common () at /lib64/libc.so.6
#3  0x00007f1484e7e97e in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libc.so.6
#4  0x00007f145d34bf1d in cnd_wait () at /lib64/libgallium-25.2.7.so
#5  0x00007f145d30553c in util_queue_thread_func () at /lib64/libgallium-25.2.7.so
#6  0x00007f145d34be4c in impl_thrd_routine () at /lib64/libgallium-25.2.7.so
#7  0x00007f1484e7f464 in start_thread () at /lib64/libc.so.6
#8  0x00007f1484f025ac in __clone3 () at /lib64/libc.so.6

Thread 4 (Thread 0x7f1452bfc6c0 (LWP 868720)):
#0  0x00007f1484e87982 in __syscall_cancel_arch () at /lib64/libc.so.6
#1  0x00007f1484e7bc3c in __internal_syscall_cancel () at /lib64/libc.so.6
#2  0x00007f1484e7c2ac in __futex_abstimed_wait_common () at /lib64/libc.so.6
#3  0x00007f1484e7e97e in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libc.so.6
#4  0x00007f145d34bf1d in cnd_wait () at /lib64/libgallium-25.2.7.so
#5  0x00007f145d30553c in util_queue_thread_func () at /lib64/libgallium-25.2.7.so
#6  0x00007f145d34be4c in impl_thrd_routine () at /lib64/libgallium-25.2.7.so
#7  0x00007f1484e7f464 in start_thread () at /lib64/libc.so.6
#8  0x00007f1484f025ac in __clone3 () at /lib64/libc.so.6

Thread 3 (Thread 0x7f146e33b6c0 (LWP 868714)):
#0  0x00007f1484e87982 in __syscall_cancel_arch () at /lib64/libc.so.6
#1  0x00007f1484e7bc3c in __internal_syscall_cancel () at /lib64/libc.so.6
#2  0x00007f1484e7c2ac in __futex_abstimed_wait_common () at /lib64/libc.so.6
#3  0x00007f1484e7e97e in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libc.so.6
#4  0x00007f14856da234 in QWaitCondition::wait(QMutex*, QDeadlineTimer) () at /lib64/libQt6Core.so.6
#5  0x00007f147e55f340 in QtWaylandClient::EventThread::run() () at /lib64/libQt6WaylandClient.so.6
#6  0x00007f14856d19ae in QThreadPrivate::start(void*) () at /lib64/libQt6Core.so.6
#7  0x00007f1484e7f464 in start_thread () at /lib64/libc.so.6
#8  0x00007f1484f025ac in __clone3 () at /lib64/libc.so.6

Thread 2 (Thread 0x7f146d0196c0 (LWP 868716)):
#0  0x00007f1484e87982 in __syscall_cancel_arch () at /lib64/libc.so.6
#1  0x00007f1484e7bc3c in __internal_syscall_cancel () at /lib64/libc.so.6
#2  0x00007f1484e7c2ac in __futex_abstimed_wait_common () at /lib64/libc.so.6
#3  0x00007f1484e7e97e in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libc.so.6
#4  0x00007f145d34bf1d in cnd_wait () at /lib64/libgallium-25.2.7.so
#5  0x00007f145d30553c in util_queue_thread_func () at /lib64/libgallium-25.2.7.so
#6  0x00007f145d34be4c in impl_thrd_routine () at /lib64/libgallium-25.2.7.so
#7  0x00007f1484e7f464 in start_thread () at /lib64/libc.so.6
#8  0x00007f1484f025ac in __clone3 () at /lib64/libc.so.6

Thread 1 (Thread 0x7f147da4bbc0 (LWP 868708)):
[KCrash Handler]
#4  0xfffffffffffffff0 in ??? ()
#5  0x00007f1484aa8b0d in KTextEditor::DocumentPrivate::postMessage(KTextEditor::Message*) () at /lib64/libKF6TextEditor.so.6
#6  0x00007f148556759a in void doActivate<false>(QObject*, int, void**) () at /lib64/libQt6Core.so.6
#7  0x00007f14835dbd0d in QTextToSpeech::errorOccurred(QTextToSpeech::ErrorReason, QString const&) () at /lib64/libQt6TextToSpeech.so.6
#8  0x00007f148556759a in void doActivate<false>(QObject*, int, void**) () at /lib64/libQt6Core.so.6
#9  0x00007f14835dc0dd in QTextToSpeechEngine::errorOccurred(QTextToSpeech::ErrorReason, QString const&) () at /lib64/libQt6TextToSpeech.so.6
#10 0x00007f1427d085f4 in QTextToSpeechEngineSpeechd::connectToSpeechDispatcher() [clone .part.0] () at /usr/lib64/qt6/plugins/texttospeech/libqtexttospeech_speechd.so
#11 0x00007f1427d08774 in QTextToSpeechEngineSpeechd::stop(QTextToSpeech::BoundaryHint) () at /usr/lib64/qt6/plugins/texttospeech/libqtexttospeech_speechd.so
#12 0x00007f148556759a in void doActivate<false>(QObject*, int, void**) () at /lib64/libQt6Core.so.6
#13 0x00007f148555df27 in QObject::destroyed(QObject*) () at /lib64/libQt6Core.so.6
#14 0x00007f1486ca3d9b in QWidget::~QWidget() () at /lib64/libQt6Widgets.so.6
#15 0x00007f1484b4d995 in KTextEditor::ViewPrivate::~ViewPrivate() () at /lib64/libKF6TextEditor.so.6
#16 0x00007f14877e1325 in KateViewManager::deleteView(KTextEditor::View*) () at /lib64/libkateprivate.so.25.12.0
#17 0x00007f14877e15a7 in KateViewManager::documentWillBeDeleted(KTextEditor::Document*) () at /lib64/libkateprivate.so.25.12.0
#18 0x00007f148556759a in void doActivate<false>(QObject*, int, void**) () at /lib64/libQt6Core.so.6
#19 0x00007f14877967aa in KateDocManager::documentWillBeDeleted(KTextEditor::Document*) () at /lib64/libkateprivate.so.25.12.0
#20 0x00007f148779ebba in KateDocManager::closeDocuments(std::span<KTextEditor::Document* const, 18446744073709551615ul>, bool) () at /lib64/libkateprivate.so.25.12.0
#21 0x00007f148779f538 in KateDocManager::closeDocumentList(std::span<KTextEditor::Document* const, 18446744073709551615ul>, KateMainWindow*) () at /lib64/libkateprivate.so.25.12.0
#22 0x00007f148778905d in KateApp::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) () at /lib64/libkateprivate.so.25.12.0
#23 0x00007f148551156c in QMetaMethodInvoker::invokeImpl(QMetaMethod, void*, Qt::ConnectionType, long long, void const* const*, char const* const*, QtPrivate::QMetaTypeInterface const* const*) () at /lib64/libQt6Core.so.6
#24 0x00007f1485512643 in QMetaObject::invokeMethodImpl(QObject*, char const*, Qt::ConnectionType, long long, void const* const*, char const* const*, QtPrivate::QMetaTypeInterface const* const*) () at /lib64/libQt6Core.so.6
#25 0x00007f1484c1fde8 in KTextEditor::Application::closeDocuments(QList<KTextEditor::Document*> const&) () at /lib64/libKF6TextEditor.so.6
#26 0x00007f144f33138d in KateProjectPlugin::closeProject(KateProject*) () at /usr/lib64/qt6/plugins/kf6/ktexteditor/kateprojectplugin.so
#27 0x00007f148556759a in void doActivate<false>(QObject*, int, void**) () at /lib64/libQt6Core.so.6
#28 0x00007f1486d8d9ba in QAbstractButton::clicked(bool) () at /lib64/libQt6Widgets.so.6
#29 0x00007f1486d8dc43 in QAbstractButtonPrivate::emitClicked() () at /lib64/libQt6Widgets.so.6
#30 0x00007f1486d8f403 in QAbstractButtonPrivate::click() () at /lib64/libQt6Widgets.so.6
#31 0x00007f1486d8f66b in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () at /lib64/libQt6Widgets.so.6
#32 0x00007f1486ecfe50 in QToolButton::mouseReleaseEvent(QMouseEvent*) () at /lib64/libQt6Widgets.so.6
#33 0x00007f1486ca95a8 in QWidget::event(QEvent*) () at /lib64/libQt6Widgets.so.6
#34 0x00007f1486c3db9f in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /lib64/libQt6Widgets.so.6
#35 0x00007f1486c4871b in QApplication::notify(QObject*, QEvent*) () at /lib64/libQt6Widgets.so.6
#36 0x00007f14854fc4e8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /lib64/libQt6Core.so.6
#37 0x00007f1486c46ef9 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) () at /lib64/libQt6Widgets.so.6
#38 0x00007f1486cbea02 in QWidgetWindow::handleMouseEvent(QMouseEvent*) () at /lib64/libQt6Widgets.so.6
#39 0x00007f1486cc1a43 in QWidgetWindow::event(QEvent*) () at /lib64/libQt6Widgets.so.6
#40 0x00007f1486c3db9f in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /lib64/libQt6Widgets.so.6
#41 0x00007f14854fc4e8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /lib64/libQt6Core.so.6
#42 0x00007f1485cf3f5b in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () at /lib64/libQt6Gui.so.6
#43 0x00007f1485d5ea8c in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib64/libQt6Gui.so.6
#44 0x00007f1485d5ec97 in QWindowSystemInterface::flushWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib64/libQt6Gui.so.6
#45 0x00007f1485558fcc in QObject::event(QEvent*) () at /lib64/libQt6Core.so.6
#46 0x00007f1486c3db9f in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /lib64/libQt6Widgets.so.6
#47 0x00007f14854fc4e8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /lib64/libQt6Core.so.6
#48 0x00007f14854ffb09 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /lib64/libQt6Core.so.6
#49 0x00007f148581efcf in postEventSourceDispatch(_GSource*, int (*)(void*), void*) () at /lib64/libQt6Core.so.6
#50 0x00007f1483a9b2a3 in g_main_context_dispatch_unlocked.lto_priv () at /lib64/libglib-2.0.so.0
#51 0x00007f1483aa41f8 in g_main_context_iterate_unlocked.isra () at /lib64/libglib-2.0.so.0
#52 0x00007f1483aa43a3 in g_main_context_iteration () at /lib64/libglib-2.0.so.0
#53 0x00007f148581e80d in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib64/libQt6Core.so.6
#54 0x00007f1485509063 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib64/libQt6Core.so.6
#55 0x00007f1485504819 in QCoreApplication::exec() () at /lib64/libQt6Core.so.6
#56 0x0000556849cc6d02 in main ()

Reported using DrKonqi
Comment 1 Christoph Cullmann 2026-01-09 18:47:42 UTC
Git commit 545185425504097780f1d2ad1dfaa30005c35c3b by Christoph Cullmann.
Committed on 09/01/2026 at 18:47.
Pushed by cullmann into branch 'master'.

clear m_speechEngineLastUser early to avoid that it is used in error handling for speechError

that crashes

M  +5    -0    src/utils/kateglobal.cpp

https://invent.kde.org/frameworks/ktexteditor/-/commit/545185425504097780f1d2ad1dfaa30005c35c3b
Comment 2 Christoph Cullmann 2026-01-09 18:48:26 UTC
Thanks for the precise report! Backtrace was very useful.