clear m_speechEngineLastUser early to avoid that it is used in error handling for speechError

that crashes

BUG: 514375